--- a/app/sass/_site.scss
+++ b/app/sass/_site.scss
@@ -47,18 +47,18 @@ input::-webkit-input-placeholder {
       width: 284px;
       height: 25px;
       padding: 0 47px 1px 19px;
-      border: 1px solid #70b1dd;
+      border: 1px solid $site-search-border;
       background: rgba(112, 177, 221, 0.102);
       border-radius: 37px;
       font-weight: 300;
       font-size: 13px;
-      color: #fff !important;
+      color: $site-search-color !important;
       letter-spacing: -0.2px;
       @include main-font1();
       @include transition(border-color, .3, 0);
 
       &:focus {
-        border-color: #ff981b;
+        border-color: $site-focus-search-border;
       }
     }
     button {
@@ -69,14 +69,14 @@ input::-webkit-input-placeholder {
       width: 45px;
       border: none;
       background: transparent;
-      color: #70b1dd;
+      color: $site-search-border;
       @include transition(color, .3, 0);
 
       i {
         @include absoluteCenter();
       }
       &:hover {
-        color: #ff981b;
+        color: $site-focus-search-border;
       }
     }
   }
@@ -85,10 +85,10 @@ input::-webkit-input-placeholder {
     z-index: 4;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 90%;
     height: 100%;
     padding: 50px 0 0;
-    background: #70b1dd;
+    background: $site-menu-back;
     font-size: 18px;
     line-height: 1;
     text-align: center;
@@ -108,12 +108,12 @@ input::-webkit-input-placeholder {
 
       a {
         font-size: 16px;
-        color: #fff;
+        color: $site-menu-color;
         font-weight: 700;
 
         &.active {
           cursor: default;
-          color: #ff981b;
+          color: $site-menu-hover-color;
         }
       }
     }
@@ -143,7 +143,7 @@ input::-webkit-input-placeholder {
       right: 10px;
       height: 3px;
       margin-top: -2px;
-      background: #ff981b;
+      background: $site-menu-btn-back;
       font-size: 0;
       @include transition( background-color, 0.3, 0 );
 
@@ -153,7 +153,7 @@ input::-webkit-input-placeholder {
         left: 0;
         width: 100%;
         height: 100%;
-        background: #ff981b;
+        background: $site-menu-btn-back;
         content: '';
         -webkit-transition: -webkit-transform 0.3s, background .3s;
         transition: transform 0.3s, background .3s;
@@ -171,13 +171,13 @@ input::-webkit-input-placeholder {
         background-color: transparent;
 
         &:before {
-          background: #fff;
+          background: $site-menu-active-btn-back;
           -webkit-transform: translateY(0) rotate(45deg);
           transform: translateY(0) rotate(45deg);
         }
 
         &:after {
-          background: #fff;
+          background: $site-menu-active-btn-back;
           -webkit-transform: translateY(0) rotate(-45deg);
           transform: translateY(0) rotate(-45deg);
         }
@@ -233,26 +233,23 @@ input::-webkit-input-placeholder {
     &__header {
 
       &-layout {
-        height: 121px;
+        height: 118px;
         padding-left: 248px;
+        padding-right: 305px;
       }
     }
     &__header-search {
-      overflow: hidden;
-      position: absolute;
       bottom: 27px;
       right: 14px;
 
       input {
         width: 284px;
         height: 35px;
-        padding: 0 47px 1px 19px;
-        border-radius: 37px;
       }
     }
     &__menu {
       position: absolute;
-      top: 61px;
+      top: 58px;
       left: auto;
       height: auto;
       width: auto;
@@ -277,7 +274,7 @@ input::-webkit-input-placeholder {
           @include transition(color, .3, 0);
 
           &:hover {
-            color: #ff981b;
+            color: $site-menu-hover-color;
           }
         }
         &:last-child {
