--- a/app/sass/index.scss
+++ b/app/sass/index.scss
@@ -7,3 +7,15 @@
 @import "site";
 @import "social";
 @import "logo";
+@import "footer-menu";
+@import "catalog";
+@import "show-list";
+@import "articles-preview";
+@import "rate";
+@import "link";
+@import "movie-news";
+@import "pagination";
+@import "contact-us";
+@import "about";
+@import "comments";
+@import "content";
