--- a/app/sass/_site.scss
+++ b/app/sass/_site.scss
@@ -185,15 +185,19 @@ input::-webkit-input-placeholder {
     }
   }
   &__footer {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
     background: url(../img/pattern.jpg);
+    border-bottom:20px solid #2f556f;
 
     &-layout {
       position: relative;
       max-width: 1030px;
-      padding: 0 15px;
+      padding: 20px 15px;
       margin: 0 auto;
+      text-align: center;
     }
     &-logo {
       width: 161px;
@@ -204,6 +208,12 @@ input::-webkit-input-placeholder {
         width: 100%;
         height: auto;
       }
+    }
+
+    .social {
+      position: relative;
+      top: auto;
+      right: auto;
     }
   }
   &__centered {
@@ -217,7 +227,133 @@ input::-webkit-input-placeholder {
   &__content {
     position: relative;
     z-index: 1;
+    padding: 3px 15px 20px;
+
+    &_indent {
+      padding-top: 30px;
+    }
+
   }
+  &:after {
+    content: '';
+    display: block;
+    clear: both;
+    width: 100%;
+    height: 272px;
+  }
+  &__footer-layout {
+    height: 252px;
+  }
+  &__title {
+    position: relative;
+    padding: 5px 113px 5px 10px;
+    margin-bottom: 21px;
+    font-weight: 300;
+    color: #fff;
+    font-size: 15px;
+    background: #254860;
+    border-radius: 0 20px 20px 0;
+
+    mark {
+      font-weight: 700;
+      color: #70b1dd;
+    }
+
+    .btn {
+      position: absolute;
+      top: 0;
+      right: -1px;
+      border-radius: inherit;
+      width: auto;
+      padding: 10px 14px 10px 12px;
+
+    }
+  }
+  &__added {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 90px;
+    max-width: 728px;
+    margin: 26px auto 28px;
+  }
+  &__inner {
+    margin-bottom: 30px;
+  }
+  &__form {
+    font-size: 14px;
+
+    label {
+      display: block;
+      margin-bottom: 7px;
+      font-size: 14px;
+      @include main-font1();
+      color: #b6b6b6;
+    }
+    textarea,
+    input {
+      width: 100%;
+      display: block;
+      padding: 0 23px;
+      height: 30px;
+      border: 1px solid #d2d2d2;
+      background: #fff;
+      @include main-font1();
+      color: #000;
+      font-size: 14px;
+    }
+    textarea:focus,
+    input:focus {
+      box-shadow: 0 0 5px rgba(0,0,0,0.15);
+    }
+    textarea {
+      padding: 10px 23px;
+      height: 150px;
+    }
+    fieldset {
+      margin-bottom: 32px;
+    }
+    fieldset.site__form-double {
+      margin-bottom: 12px;
+    }
+    fieldset > *:last-child {
+      margin-bottom: 0;
+    }
+
+    &-double {
+      text-align: justify;
+
+      &:after {
+        display: inline-block;
+        width: 100%;
+        content: '';
+      }
+    }
+    &-cell {
+      display: inline-block;
+      vertical-align: top;
+      width: 47.3%;
+    }
+    &-submit {
+      text-align: center;
+      margin-top: -8px;
+
+      button {
+        display: inline-block;
+        position: relative;
+        font-size: 16px;
+        text-transform: uppercase;
+        color: #fff;
+        @include main-font1();
+        font-weight: 700;
+        border: none;
+        -webkit-transition: background 0.3s ease;
+        transition: background 0.3s ease;
+      }
+    }
+  }
+
 }
 
 @media (min-width: $phone-landscape) {
@@ -225,10 +361,78 @@ input::-webkit-input-placeholder {
 }
 @media (min-width: $tablet-portrait) {
 
+  .site {
+
+    &__header {
+
+      &:after {}
+
+      &-layout {}
+    }
+    &__header-search {
+
+      input {
+
+        &:focus {}
+      }
+      button {
+
+        i {}
+        &:hover {}
+      }
+    }
+    &__menu {
+
+      &.opened {}
+
+      &-item {
+
+        a {
+
+          &.active {}
+        }
+      }
+    }
+    &__menu-btn {
+
+      span {
+
+        &:before,
+        &:after {}
+        &:before {}
+        &:after {}
+      }
+      &.opened {
+
+        span {
+
+          &:before {}
+
+          &:after {}
+        }
+      }
+    }
+    &__footer {
+
+      &-layout {}
+      &-logo {
+
+        img {}
+      }
+
+      .social {}
+    }
+    &__centered {}
+    &__content {}
+    &__title {
+      font-size: 30px;
+      padding: 5px 113px 6px 24px;
+    }
+  }
+
 }
 @media (min-width: $tablet-landscape) {
   .site {
-
 
     &__header {
 
@@ -289,6 +493,132 @@ input::-webkit-input-placeholder {
         display: none;
       }
     }
+    &__footer {
+      border-bottom: 48px solid #2f556f;
+
+      &-layout {
+        position: relative;
+
+        &:before {
+            position: absolute;
+            top: 0;
+            left: 960px;
+            width: 100vw;
+            height: 199px;
+            background: #fff;
+            content:'';
+        }
+
+        &:after {
+          position: absolute;
+          top: -90px;
+          right: -83px;
+          width: 283px;
+          height: 289px;
+          background: url("../img/footer-pic.png") no-repeat;
+          background-size: contain;
+          content: '';
+          pointer-events: none;
+        }
+
+      }
+      &-logo {
+        position: absolute;
+        top: 42px;
+        left: 0;
+        margin: 0;
+      }
+
+      .social {
+        position: absolute;
+        top: 62px;
+        right: 140px;
+      }
+    }
+    &:after {
+      height: 199px;
+    }
+    &__footer-layout {
+      height: 151px;
+    }
+    &__title {
+     }
+    &__wrapper {
+      display: -webkit-box;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-flex-flow: row wrap;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      margin: 0 auto;
+      max-width: 1000px;
+    }
+    &__inner {
+      width: 659px;
+      margin-bottom: 0;
+    }
+    &__aside {
+      position: relative;
+      width: calc(100% - 707px);
+      padding: 107px 0 20px;
+
+      &>* {
+        position: relative;
+        z-index: 2;
+      }
+
+      &:before {
+          position: absolute;
+        top: 9px;
+        right: 0;
+          width: 88px;
+          height: 118px;
+          background: url("../img/aside-bird.png") no-repeat;
+          background-size: contain;
+          content:'';
+      }
+
+      &:after {
+        position: absolute;
+        z-index: 3;
+        top: 105px;
+        right: 2px;
+        width: 93px;
+        height: 15px;
+        background: url("../img/aside-bird_2.png") no-repeat;
+        background-size: contain;
+        content: '';
+      }
+
+      &_no-indent {
+        padding-top: 0;
+
+        &:before {
+          top: -98px;
+          right: -3px;
+        }
+
+        &:after {
+          top: -2px;
+          right: -1px;
+        }
+
+      }
+    }
+    &__content {
+      padding-bottom: 81px;
+
+      &_indent {
+        padding-top: 117px;
+      }
+
+    }
+    &__form {
+      margin-right: 9px;
+    }
+
   }
 }
 @media (min-width: $desktop) {
