--- a/app/sass/_colors.scss
+++ b/app/sass/_colors.scss
@@ -1,6 +1,56 @@
 $main-color-1: #70b1dd;
 $main-color-2: #ff981b;
 $main-color-3: #fff;
+$main-color-4: #313131;
+
+/* ------------ articles-preview ------------ */
+$articles-preview-border: #ff8c38;
+$articles-preview-title-bg: #ff7b1b;
+/* ------------ /articles-preview ------------ */
+
+/* ------------ comments ------------ */
+$comments-border: #f3f3f3;
+$comments-head: #ff7b1b;
+$comments-txt: #b6b6b6;
+$comments-txt-border: #d2d2d2;
+/* ------------ /comments ------------ */
+
+/* ------------ pagination ------------ */
+$pagination-bg: #f16c0b;
+/* ------------ /pagination ------------ */
+
+/* ------------ movie-news ------------ */
+$movie-news-border: #f3f3f3;
+/* ------------ /movie-news ------------ */
+
+/* ------------ site ------------ */
+$site-footer: #2f556f;
+$site-title-bg: #254860;
+$site-title-mark: #70b1dd;
+$site-form-label: #b6b6b6;
+$site-form-border: #d2d2d2;
+$site-input-color: #000;
+$site-input-focus: rgba(0,0,0,0.15);
+$site-footer-border: #2f556f;
+$site-footer-before: #fff;
+/* ------------ /site ------------ */
+
+/* ------------ show-list ------------ */
+$show-list-bg: #f3f3f3;
+/* ------------ /show-list ------------ */
+
+/* ------------ footer-menu ------------ */
+$footer-menu-bg: #3d6078;
+/* ------------ /footer-menu ------------ */
+
+/* ------------ link ------------ */
+$link-color: #639cc3;
+/* ------------ /link ------------ */
+
+/* ------------ content ------------ */
+$content-img-shadow: rgba(0,0,0,0.7);
+$content-border: #000;
+/* ------------ /content ------------ */
 
 
 /*---------- popup ----------*/
