--- a/app/sass/_comments.scss
+++ b/app/sass/_comments.scss
@@ -10,8 +10,8 @@
     font-size: 14px;
     padding: 0 0 5px 20px;
     margin-bottom: 18px;
-    color: #313131;
-    border-bottom: 1px solid #f3f3f3;
+    color: $main-color-4;
+    border-bottom: 1px solid $comments-border;
 
     &:before {
         position: absolute;
@@ -25,7 +25,7 @@
     }
 
     span {
-      color: #ff7b1b;
+      color: $comments-head;
     }
 
   }
@@ -44,11 +44,11 @@
 
     textarea {width: calc(100% - 71px);
       height: 65px;
-      border: 1px solid #d2d2d2;
+      border: 1px solid $comments-txt-border;
       padding: 7px 14px;
       font-size: 14px;
       @include main-font1();
-      color: #b6b6b6;
+      color: $comments-txt;
     }
 
   }
@@ -59,10 +59,8 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-color: #f3f3f3;
+    background-color: $comments-border;
   }
-
-  &__head {}
 
   &__wrap {
     margin-bottom: 37px;
@@ -77,12 +75,12 @@
       vertical-align: top;
       font-weight: 700;
       border-bottom: 1px solid transparent;
-      color: #ff7b1b;
+      color: $comments-head;
       -webkit-transition: border-bottom 0.3s ease;
       transition: border-bottom 0.3s ease;
 
       &:hover {
-        border-bottom: 1px solid #ff7b1b;
+        border-bottom: 1px solid $comments-head;
       }
     }
 
@@ -93,7 +91,7 @@
       margin-left: 17px;
       font-size: 13px;
       top: 1px;
-      color: #b6b6b6;
+      color: $comments-txt;
 
       &:before {
         position: absolute;
@@ -101,7 +99,7 @@
         left: -8px;
         width: 1px;
         height: 13px;
-        background: #ff7b1b;
+        background: $comments-head;
         content: '';
       }
 
@@ -114,8 +112,6 @@
       margin-bottom: 12px;
     }
 
-    &-head {}
-
     &-controls {
 
       &>* {
@@ -124,21 +120,11 @@
 
     }
 
-    &-head {}
-
     &:last-child {
       margin-bottom: 0;
     }
 
   }
-
-}
-
-@media (min-width: $phone-landscape)  {}
-
-@media (min-width: $tablet-portrait)  {
-
-
 
 }
 
@@ -167,36 +153,6 @@
     &__head,
     &__wrap {
       margin-right: 11px;
-    }
-
-    &__head {}
-
-    &__cover {}
-
-    &__pic {}
-
-    &__head {}
-
-    &__wrap {
-
-      &-head {}
-
-      &-name {}
-
-      &-time {
-
-        &:before { }
-
-      }
-
-      &-txt {}
-
-      &-head {}
-
-      &-controls {}
-
-      &-head {}
-
     }
 
   }
