--- a/app/sass/_about.scss
+++ b/app/sass/_about.scss
@@ -1,6 +1,6 @@
 .about {
   font-size: 14px;
-  color: #313131;
+  color: $main-color-4;
   margin-bottom: 35px;
 
   &:first-child {
@@ -38,8 +38,6 @@
 
 }
 
-@media (min-width: $phone-landscape) {}
-
 @media (min-width: $tablet-portrait) {
 
   .about {
@@ -58,5 +56,3 @@
   }
 
 }
-
-@media (min-width: $tablet-landscape) {}
