--- a/app/sass/_pagination.scss
+++ b/app/sass/_pagination.scss
@@ -12,7 +12,7 @@
       overflow: hidden;
       margin-left: 0;
       padding-top: 7px;
-      color: #fff;
+      color: $main-color-3;
       font-size: 13px;
       font-weight: 700;
       text-align: center;
@@ -37,7 +37,7 @@
         width: 100%;
         height: 100%;
         border-radius: inherit;
-        background: #f16c0b;
+        background: $pagination-bg;
         opacity: 0;
         -webkit-transition: opacity 0.3s ease;
         transition: opacity 0.3s ease;
@@ -79,7 +79,6 @@
     }
 
   }
-  &__prev {}
   &__next {
 
     &:after {
