created all pages

--- a/app/sass/_btn.scss
+++ b/app/sass/_btn.scss
@@ -3,7 +3,7 @@
   height: 100%;
   width: 109px;
   padding: 0 10px;
-  color: $btn-color;
+  color: $main-color-3;
   display: flex;
   text-align: left;
   flex-direction: row;
